<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">


    <TextView
        android:text="@string/diclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/disclaimer" />

    <TextView
        android:text="@string/disclaimer_descrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_marginTop="80dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="24sp" />

    <Button
        android:text="@string/Disclaimer_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:elevation="15dp"
        android:background="@drawable/spacebtn"
        android:id="@+id/continuebtn" />

</RelativeLayout>