<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_row="2"
    android:useDefaultMargins="true">

    <TextView
        android:text="@string/Appops2Ttile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appops"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:text="@string/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filter"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginLeft="30dp" />

    <TextView
        android:text="@string/instaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/installedapps"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="1" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="2"
        android:id="@+id/applist" />

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:layout_rowSpan="2"
        android:layout_gravity="right"
        android:background="@drawable/filterbtn" />

</GridLayout>